# scryfall-parser

./: Cargo.toml  README.md  README_REDIS_ANALYSIS.md  implemented_fixes.md  index_analysis_report.md  lua_alignment_plan.md  redis_basic_info.sh  redis_key_analyzer.py  redis_patterns_oneliner.md  redis_quick_scan.sh
mtgjson-indexer/: Cargo.toml  REDIS_KEY_SCHEMA.md  comprehensive_api_test.py  deck_browser.py  mtg_redis_client.py  query_runner.py  run_lua.py  tcgcsv_clean.py
mtgjson-indexer/.cargo/: config.toml
mtgjson-indexer/lua/: card_stats.lua  cleanup_indexes.lua  create_redis_indexes.lua  deck_search.lua  export_tcg_csv.lua  find_duplicates.lua  find_expensive_cards.lua  find_missing_data.lua  price_comparison.lua  pricing_trends.lua  sealed_arbitrage.lua  search_cards.lua  set_analysis.lua  sku_price_analysis.lua  unique_printings.lua
mtgjson-indexer/src/: api_server.rs  api_types.rs  lib.rs  main.rs  redis_client.rs  sku_pricing.rs  types.rs
src/: api_server.rs  lib.rs  main.rs  redis_client.rs
