[package]
name = "scryfall-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
redis = "0.22.0"
indicatif = "0.17.0"
rayon = "1.10.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
lz4 = "1.28.1"
bincode = "2.0.1"
smallvec = "1.15.0"
chrono = "0.4"
