[package]
name = "mtgjson-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"  # Faster JSON parsing with SIMD
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
indicatif = "0.17"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
futures-util = "0.3"
xz2 = "0.1"
uuid = { version = "1.0", features = ["v4", "v5"] }
walkdir = "2.4"
memmap2 = "0.9"     # Memory mapping for large files
crossbeam = "0.8"   # Lock-free data structures
csv = "1.3"         # CSV parsing for TCGPlayer pricing data

# Ultra-aggressive optimization profiles for high-end hardware (i7-14700HX + 64GB RAM)
[profile.release]
# Maximum optimization level
opt-level = 3
# Enable fat LTO for maximum cross-crate optimization
lto = "fat"
# Single codegen unit for maximum optimization
codegen-units = 1
# Use abort for maximum performance
panic = "abort"
# Strip all symbols for smallest binary
strip = true
# Disable runtime checks for maximum speed
overflow-checks = false
debug-assertions = false
# Optimize for speed over size
incremental = false

# Nuclear optimization profile for benchmarks/production
[profile.ultra]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false
rpath = false

[[bin]]
name = "mtgjson_indexer"
path = "src/main.rs" 